horizontal scroll fix

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,5 +1,7 @@
 .intro-bg-ilust {
   position: absolute;
+  max-width: 100%;
+  object-fit: cover;
   z-index: -1;
   top: 0;
   left: 0;
